# solon

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp  scraping.py  search.cpp  search.h  solon_app.lnk  words.txt
deck/: CMakeLists.txt  Makefile  cmake_install.cmake  deck.cpp  deck.h
examples/: examples.txt
examples/decks/: current.txt  django.txt  ml.txt
files/decks/: deep_learning.txt  history.txt  physics.txt
learning/: a.out  deck.cpp  deck.h  main  main.cpp  scraping.py  test.txt
learning/decks/: deep_learning.txt  end_to_end_mlproject.txt
search/: Makefile  cmake_install.cmake  examples.txt  history.txt  search.cpp  search.h
voice/: scraping.py
wikipedia_api/: main.py
